--- a/dev/flat_model.Rmd
+++ b/dev/flat_model.Rmd
@@ -38,13 +38,25 @@ model <- function(
     stop("Some validator are not in the properties")
   }
 
-  object_con <- mongolite::mongo(
+  # This is a weird R6 class that is not really an R6 Class
+  # Create an env that mimic self, private and public
+  shelf <- new.env()
+
+  shelf$object_con <- mongolite::mongo(
     db = con$db,
     collection = name,
     url = con$url,
     verbose = con$verbose,
     options = con$options
   )
+  shelf$name <- name
+  shelf$validator <- validator
+  shelf$properties <- properties
+  shelf$empt <- lapply(
+    properties,
+    function(x) x(1)
+  )
+  shelf$keys <- names(properties)
 
   cl <- R6::R6Class(
     "Mongoose",
@@ -54,60 +66,62 @@ model <- function(
   stop_on_error = TRUE,
   ...
       ) {
-        object_con$insert(
-          data = private$properties,
+
+        shelf$object_con$insert(
+          data = private$props,
           pagesize = pagesize,
           stop_on_error = stop_on_error,
           ...
         )
       },
       initialize = function(
-  properties
+  props
  ) {
-        check_props(properties, validator)
-        for (i in names(properties)) {
-          properties[[i]] <- validator[[i]](
-            properties[[i]]
+        check_props(props, shelf$validator)
+        if (
+          !all(names(props) %in% names(shelf$validator))
+        ){
+          stop(
+            "[Undefined Prop] All props should be matched in the properties of the model"
           )
         }
-        private$properties <- properties
+        for (i in names(props)) {
+          props[[i]] <- shelf$validator[[i]](
+            props[[i]]
+          )
+        }
+        private$props <- props
       }
     ),
     private = list(
-      validator = validator,
-      properties = NULL
+      props = NULL
     )
   )
   cl$find <- function(
   query = list(),
-  fields = '{"_id" : 0}',
+  fields = '{}',
   sort = "{}",
   skip = 0,
   limit = 0,
   converter = jsonlite::toJSON
       ) {
     query <- converter(query)
-    it <- object_con$iterate(
+    it <- shelf$object_con$iterate(
       query = query,
       fields = fields,
       sort = sort,
       skip = skip,
       limit = limit
     )
-    empt <- lapply(
-      properties,
-      \(x) x(1)
-    )
     res <- list()
-    keys <- names(properties)
     while (!is.null(batch <- it$one())) {
       tree <- list()
-      for (k in keys) {
+      for (k in shelf$keys) {
         tree[[k]] <- {
           if (is.null(batch[[k]])) {
-            empt[[k]]
+            shelf$empt[[k]]
           } else {
-            validator[[k]](batch[[k]])
+            shelf$validator[[k]](batch[[k]])
           }
         }
       }
@@ -115,11 +129,42 @@ model <- function(
     }
     res
   }
-  cl$drop <- function() {
-    object_con$drop()
+  cl$find_one <- function(
+    query = list(),
+    fields = "{}",
+    sort = "{}",
+    skip = 0,
+    limit = 0,
+    converter = jsonlite::toJSON
+  ) {
+    query <- converter(query)
+    it <- shelf$object_con$iterate(
+      query = query,
+      fields = fields,
+      sort = sort,
+      skip = skip,
+      limit = limit
+    )
+    batch <- it$one()
+    tree <- list()
+    for (k in shelf$keys) {
+      tree[[k]] <- {
+        if (is.null(batch[[k]])) {
+          shelf$empt[[k]]
+        } else {
+          shelf$validator[[k]](batch[[k]])
+        }
+      }
+    }
+    tree
+
   }
+  cl$drop <- shelf$object_con$drop
+  cl$count_documents <- shelf$object_con$count
+  cl$disconnect <- shelf$object_con$disconnect
   cl
 }
+
 con <- new.env()
 
 #' Connect Mongoose
@@ -144,7 +189,6 @@ mongooser_connect <- function(
 ```{r examples-model}
 # const mongoose = require('mongoose');
 library(mongooser)
-
 # mongoose.connect("mongodb://127.0.0.1:27017/test")
 mongooser_connect(
   db = "test",
@@ -187,7 +231,12 @@ fluffy$save()
 
 Cat$find()
 
+Cat$find_one()
+Cat$find_one(list(name = "fluffy"))
+
 Cat$drop()
+Cat$disconnect()
+Cat$count_documents()
 
 Food <- model(
   "Food",
@@ -304,9 +353,11 @@ test_that("model works", {
 ```{r development-inflate, eval=FALSE}
 # Run but keep eval=FALSE to avoid infinite loop
 # Execute in the console directly
+rm(list = ls())
 fusen::inflate(
   flat_file = "dev/flat_model.Rmd",
   vignette_name = NA
 )
+grkstyle::grk_style_pkg()
 ```
 
